Set graph width to 100%

--- a/databricksusagereport/html/index.html
+++ b/databricksusagereport/html/index.html
@@ -9,6 +9,6 @@
 
 <body>
 <!-- Plotly chart will be drawn inside this DIV -->
-<div id="myDiv" style="width: 400px; height: 400px;"></div>
+<div id="myDiv" style="width: 100%; height: 100%;"></div>
 <script src="graph-data.js"></script>
 </body>
