Update the index.html file to use a local copy of list.js instead of the hosted version

--- a/usagereports/html/aws/index.html
+++ b/usagereports/html/aws/index.html
@@ -13,6 +13,6 @@
      var BUCKET_URL = 'https://mas-dse-usage-reports.s3.amazonaws.com';
      var S3BL_IGNORE_PATH = false;
 </script>
-<script src="http://rgrp.github.io/s3-bucket-listing/list.js"></script>
+<script src="/list.js"></script>
 </body>
 </html>
